[tool.poetry]
name = "Orbit"
version = "1.3.0"
description = "🌑 A simple discord bot made with discord.py"
authors = ["Tibor (https://github.com/tibor309)"]

[tool.poetry.dependencies]
python = ">=3.14"
aiohttp = ">=3.13.2"
discord-py = ">=2.6.4"
python-dotenv = ">=1.2.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"